--- a/Common Template/USER_GROUP_CREATED.html
+++ b/Common Template/USER_GROUP_CREATED.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Corporate Invitation</title>
+    <title>User group created</title>
   </head>
   <body
     style="
@@ -23,28 +23,23 @@
         border-radius: 8px;
       "
     >
-     <div style="text-align: center">
+    <div style="text-align: center">
         <img src="https://tcs-dev-public.s3.eu-west-2.amazonaws.com/corporate/image/amsvc2ism6etsws3.png" width="150spx" style="margin-bottom: 20px" />
       </div>
       <div style="font-size: 16px; line-height: 1.6; color: #333333">
         <p>Dear {{USER_NAME}},</p>
         <p>
-          We are pleased to invite you to join Talent Tender users. The following link will take you to the log in page.
-        </p>
-        <p>
-          <a href="{{LOGIN_URL}}" style="color: #0066cc; text-decoration: none"
-          >{{LOGIN_URL}}</a
-        >
+          Your user group {{GROUP_NAME}} has been successfully
+          created.You can manage the group and its members on the Users page.
         </p>
         <p style="margin-top: 20px; font-size: 16px">
-          A warm welcome to Talent Tender !<br />Talent Tender team
+          Best regards,<br />Talent Tender Team
         </p>
-        <div style="margin-top: 20px">
-          <p>
-            <a href="mailto:{{HELP_MAIL}}">TalentTenderHelp</a>
-          </p>
-        </div>
       </div>
+
+      <p style="margin-top: 20px">
+        <a href="mailto:{{HELP_MAIL}}">TalentTenderHelp</a>
+      </p>
       <div
         style="
           margin-top: 30px;
