--- a/Corporate/CONTACT_US.html
+++ b/Corporate/CONTACT_US.html
@@ -25,7 +25,7 @@
     >
       <div style="text-align: center">
         <img
-          src="https://tcs-dev-public.s3.eu-west-2.amazonaws.com/corporate/image/amsvc2ism6etsws3.png"
+          src="https://materials.talenttender.com/images/logo.png"
           width="150px"
           style="margin-bottom: 20px"
         />
