--- a/Corporate/SERVICE_REVIEW_STAGE_TWO_INVITE.html
+++ b/Corporate/SERVICE_REVIEW_STAGE_TWO_INVITE.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Corporate Invitation</title>
+  <title>Service Review Stage Two Invitation</title>
 </head>
 
 <body style="
@@ -27,18 +27,17 @@
     </div>
     <div style="font-size: 16px; line-height: 1.6; color: #333333">
       <p>Dear {{USER_NAME}},</p>
-      <p>
-        We are pleased to invite you to join Talent Tender.
-      </p>
-      <p class="text">Access Talent Tender Log in page by clicking on the following link:<a href="{{LOGIN_URL}}"
-          style="color: #0066cc; text-decoration: none">{{LOGIN_URL}}</a></p>
-      <p class="text">Your credentials are:</p>
-      <p class="text">Username: {{USER_EMAIL}}</p>
-      <p class="text">
-        <a href="{{RESET_PASSWORD_LINK}}">Click here</a> to set your password
-      </p>
-      <p style="margin-top: 20px; font-size: 16px">
-        A warm welcome to Talent Tender !<br />Talent Tender team
+      <p>		
+		CPT is coordinating the evaluation of Temasek's vendors for the financial year {{FINANCIAL_YEAR}}. You are being invited to review the quality of services of the following vendor(s):
+      </p>	  
+	  <p>{{VENDOR_NAME}}</p>			
+	  <p>Expected Review completion date: {{EXPECTED_COMPLETION_DATE}}</p>			
+      <p class="text">Please log in on Talent Tender and navigate to the Services Review page on the Dashboard (left side menu).</p>      
+      <p class="text">Select the right vendor(s) you have been asked to review above</p>      
+      <p class="text">Provide you review and click submit within the deadline indicated next to the vendor's name</p>      
+      <p class="text">Many thanks in advance for your contribution to this important exercice for Temasek and your department in particular. </p>            
+	  <p style="margin-top: 20px; font-size: 16px">
+        Best regards,<br />Your CPT team
       </p>
       <div style="margin-top: 20px">
         <p style="text-align: center;">
