--- a/Corporate/PROPOSAL_UPDATE.html
+++ b/Corporate/PROPOSAL_UPDATE.html
@@ -4,28 +4,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vendor Selecting option to proceed with creating a proposal</title>
+  <title>Vendor Updating a Submitted Proposal</title>
 </head>
 
 <body style="font-family: Arial, sans-serif; background-color: #2c2f3f; margin: 0; padding: 30px; margin-top: 30px;">
   <div style="max-width: 600px; margin: 0 auto; background-color: #ffffff; padding: 20px; border-radius: 8px;">
     <div style="text-align: center">
-      <img src="https://materials.talenttender.com/images/logo.png" width="150spx"
+      <img src="https://materials.talenttender.com/images/logo.png" width="150px"
         style="margin-bottom: 20px" />
-
     </div>
     <div style="font-size: 16px; line-height: 1.6; color: #333333;">
       <p>Dear {{USER_NAME}},</p>
       <p class="text">
-        We are happy to confirm that we will submit our fee proposal for project {{PROJECT_NAME}} before expiry of your deadline.
+        We are writing to inform you that we have made an update to our previously submitted proposal for the project <strong>{{PROJECT_NAME}}</strong>.
       </p>
+
       <hr class="hr-border">
-      <br class="text">kind regards, <br />{{VENDOR_NAME}} [{{VENDOR_USERNAME}} ({{VENDOR_USEREMAIL}})]</p>
+      <br class="text">Kind regards, <br />{{VENDOR_NAME}} [{{VENDOR_USERNAME}} ({{VENDOR_USEREMAIL}})]</p>
     </div>
     <div style="margin-top: 30px; text-align: center; color: #999999; font-size: 14px;">
       &copy; {{CURRENT_YEAR}} Talent Tender. All rights reserved.
     </div>
   </div>
 </body>
-
 </html>
