--- a/Corporate/RFP_APPROVED_AND_COMPLETED.html
+++ b/Corporate/RFP_APPROVED_AND_COMPLETED.html
@@ -21,29 +21,28 @@
         border-radius: 8px;
       ">
     <div style="text-align: center">
-      <img src="https://tcs-dev-public.s3.eu-west-2.amazonaws.com/corporate/image/amsvc2ism6etsws3.png" width="150px"
+      <img src="https://materials.talenttender.com/images/logo.png" width="150px"
         style="margin-bottom: 20px" />
     </div>
     <div style="font-size: 16px; line-height: 1.6; color: #333333">
       <p>Dear {{RFP_CREATOR_NAME}},</p>
-
       <p>
         We are pleased to inform you that {{APPROVER_NAME}} has approved {{WINNING_BIDDER_NAME}} as winning bidder for project {{PROJECT_NAME}}. With this approval, the RFP process is now completed.
       </p>
-
       <p>
         Thank you for your time and efforts in managing this RFP process.
       </p>
-
       <p style="margin-top: 20px; font-size: 16px">
         Best regards,<br />Talent Tender Team
       </p>
-    </div>
 
-    <div style="margin-top: 20px">
-      <p>
-        <a href="mailto:{{HELP_MAIL}}">TalentTenderHelp</a>
-      </p>
+      <div style="margin-top: 20px">
+        <p style="text-align: center;">
+          please contact us for technical queries at: <a href="mailto:{{TECH}}">{{TECH}}</a>,
+          <br>
+          for anything else at: <a href="mailto:{{NON_TECH}}">{{NON_TECH}}</a>
+        </p>
+      </div>
     </div>
 
     <div style="
@@ -56,5 +55,4 @@
     </div>
   </div>
 </body>
-
 </html>
