--- a/Corporate/RFP_PROPOSALS_RECEIVED.html
+++ b/Corporate/RFP_PROPOSALS_RECEIVED.html
@@ -24,7 +24,7 @@
       "
     >
     <div style="text-align: center">
-      <img src="https://tcs-dev-public.s3.eu-west-2.amazonaws.com/corporate/image/amsvc2ism6etsws3.png" width="150spx" style="margin-bottom: 20px" />
+      <img src="https://materials.talenttender.com/images/logo.png" width="150spx" style="margin-bottom: 20px" />
     </div>
       <div style="font-size: 16px; line-height: 1.6; color: #333333">
         <p>Dear {{USER_NAME}},</p>
@@ -39,8 +39,10 @@
         </p>
       </div>
       <div style="margin-top: 20px">
-        <p>
-          <a href="mailto:{{HELP_MAIL}}">TalentTenderHelp</a>
+        <p style="text-align: center;">
+          please contact us for technical queries at: <a href="mailto:{{TECH}}">{{TECH}}</a>,
+          <br>
+          for anything else at: <a href="mailto:{{NON_TECH}}">{{NON_TECH}}</a>
         </p>
       </div>
       <div
