--- a/Corporate/RFP_SUBMISSION_APPROVED.html
+++ b/Corporate/RFP_SUBMISSION_APPROVED.html
@@ -13,6 +13,7 @@
       margin: 0;
       padding: 30px;
       margin-top: 30px;
+      margin-top: 70px;
     ">
   <div style="
         max-width: 600px;
@@ -20,23 +21,26 @@
         background-color: #ffffff;
         padding: 20px;
         border-radius: 8px;
+        margin-top: 80px
       ">
     <div style="text-align: center">
-      <img src="https://tcs-dev-public.s3.eu-west-2.amazonaws.com/corporate/image/amsvc2ism6etsws3.png" width="150px"
+      <img src="https://materials.talenttender.com/images/logo.png" width="150px"
         style="margin-bottom: 20px" />
     </div>
     <div style="font-size: 16px; line-height: 1.6; color: #333333">
       <p>Dear {{USER_NAME}},</p>
       <p>
-        We are pleased to inform you that {{APPROVER_NAME}} has approved your RFP submission for {{PROJECT_NAME}}.
+        We are pleased to inform you that {{APPROVER_NAME}} has approved your RFP submission for project {{PROJECT_NAME}}.
       </p>
       <p style="margin-top: 20px; font-size: 16px">
         Best regards,<br />Talent Tender Team
       </p>
     </div>
     <div style="margin-top: 30px">
-      <p>
-        <a href="mailto:{{HELP_MAIL}}">TalentTenderHelp</a>
+      <p style="text-align: center;">
+        please contact us for technical queries at: <a href="mailto:{{TECH}}">{{TECH}}</a>,
+        <br>
+        for anything else at: <a href="mailto:{{NON_TECH}}">{{NON_TECH}}</a>
       </p>
     </div>
     <div style="
