--- a/Corporate/RFP_WINNER_DECLINED.html
+++ b/Corporate/RFP_WINNER_DECLINED.html
@@ -22,13 +22,13 @@
         border-radius: 8px;
       ">
     <div style="text-align: center">
-      <img src="https://tcs-dev-public.s3.eu-west-2.amazonaws.com/corporate/image/amsvc2ism6etsws3.png" width="150px"
+      <img src="https://materials.talenttender.com/images/logo.png" width="150px"
         style="margin-bottom: 20px" />
     </div>
     <div style="font-size: 16px; line-height: 1.6; color: #333333">
       <p>Dear {{USER_NAME}},</p>
       <p>
- We regret to inform you that {{APPROVER_NAME}} has declined the winning bidder recommendation you have made for {{PROJECT_NAME}}. 
+     We regret to inform you that {{APPROVER_NAME}} has declined the winning bidder recommendation you have made for project {{PROJECT_NAME}}. 
       </p>
       <p> Please reach out to {{APPROVER_NAME}}.
       </p>
@@ -37,8 +37,10 @@
       </p>
     </div>
     <div style="margin-top: 20px">
-      <p>
-        <a href="mailto:{{HELP_MAIL}}">TalentTenderHelp</a>
+      <p style="text-align: center;">
+        please contact us for technical queries at: <a href="mailto:{{TECH}}">{{TECH}}</a>,
+        <br>
+        for anything else at: <a href="mailto:{{NON_TECH}}">{{NON_TECH}}</a>
       </p>
     </div>
     <div style="
