--- a/Corporate/SERVICE_REVIEW_STAGE_TWO_COMPLETE.html
+++ b/Corporate/SERVICE_REVIEW_STAGE_TWO_COMPLETE.html
@@ -4,31 +4,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vendor Selecting option to proceed with creating a proposal</title>
+  <title>Service Review Completed</title>
 </head>
 
 <body style="font-family: Arial, sans-serif; background-color: #2c2f3f; margin: 0; padding: 30px; margin-top: 30px;">
   <div style="max-width: 600px; margin: 0 auto; background-color: #ffffff; padding: 20px; border-radius: 8px;">
     <div style="text-align: center">
-      <img src="https://materials.talenttender.com/images/logo.png" width="150spx"
-        style="margin-bottom: 20px" />
-
+      <img src="https://materials.talenttender.com/images/logo.png" width="150px" style="margin-bottom: 20px" />
     </div>
-    <div style="font-size: 16px; line-height: 1.6; color: #333333;">
+    <div style="font-size: 16px; line-height: 1.6; color: #333333">
       <p>Dear {{USER_NAME}},</p>
-      <p class="text">You have successfully submitted your fee proposal for the following project : {{PROJECT_NAME}}.</p>
-        <p class="text">Temasek will now asses your fee proposal.</p>
-      <p style="margin-top: 20px; font-size: 16px;">
-        Wish you a nice day !<br />
-        Talent Tender team
+      <p>We would like to inform you that the service review process for the following vendor(s) has been successfully completed:</p>
+      <p><strong>{{VENDOR_NAME}}</strong></p>
+      <p>This marks the conclusion of both Stage 1 and Stage 2 reviews for the financial year <strong>{{FINANCIAL_YEAR}}</strong>.</p>
+      <p style="margin-top: 20px; font-size: 16px">
+        Best regards,<br />Talent Tender Team
       </p>
-      <div style="margin-top: 30px;">
+      <div style="margin-top: 20px">
         <p style="text-align: center;">
           please contact us for technical queries at: <a href="mailto:{{TECH}}">{{TECH}}</a>,
           <br>
           for anything else at: <a href="mailto:{{NON_TECH}}">{{NON_TECH}}</a>
-        </p>
-      </div>
+        </p>      </div>
     </div>
     <div style="margin-top: 30px; text-align: center; color: #999999; font-size: 14px;">
       &copy; {{CURRENT_YEAR}} Talent Tender. All rights reserved.
