--- a/Corporate/VENDOR_SELECTING_OPTION_TO_NOT_TO_PARTICIPATE.html
+++ b/Corporate/VENDOR_SELECTING_OPTION_TO_NOT_TO_PARTICIPATE.html
@@ -10,19 +10,19 @@
 <body style="font-family: Arial, sans-serif; background-color: #2c2f3f; margin: 0; padding: 30px; margin-top: 30px;">
   <div style="max-width: 600px; margin: 0 auto; background-color: #ffffff; padding: 20px; border-radius: 8px;">
     <div style="text-align: center">
-      <img src="https://tcs-dev-public.s3.eu-west-2.amazonaws.com/corporate/image/amsvc2ism6etsws3.png" width="150spx"
+      <img src="https://materials.talenttender.com/images/logo.png" width="150spx"
         style="margin-bottom: 20px" />
-
     </div>
     <div style="font-size: 16px; line-height: 1.6; color: #333333;">
       <p>Dear {{USER_NAME}},</p>
-      <p class="text">We have decided not to participate to your RFP for the following reason(s):</p>
-      <p class="text">{{DYNAMIC_CONTENT}}</p>
-      <p class="text">on the following project: {{PROJECT_NAME}}
+      <p class="text">Thank you for inviting us to submit a proposal for project {{PROJECT_NAME}}. We have decide not to participate.</p>
+      <p class="text">Reasons are the following:
+        <br/>
+        {{DYNAMIC_CONTENT}}
       </p>
-      <p class="text">We thank you for asking us to bid for this project and hope that we will have other opportunities to bid and/or work with your organization.</p>
+      <p>We thank you for inviting us to bid and hope that we will have other opportunities to bid/and or work with Temasek.</p>
       <hr class="hr-border">
-      <p class="text">kind regards <br/> 
+      <p class="text">kind regards, <br/> 
         {{VENDOR_NAME}} [{{VENDOR_USERNAME}}({{VENDOR_USEREMAIL}})]</p>
     </div>
     <div style="margin-top: 30px; text-align: center; color: #999999; font-size: 14px;">
@@ -30,5 +30,4 @@
     </div>
   </div>
 </body>
-
 </html>
