--- a/Corporate/WINNING_BIDDER_AWAITING_APPROVAL.html
+++ b/Corporate/WINNING_BIDDER_AWAITING_APPROVAL.html
@@ -22,13 +22,13 @@
         padding: 20px;
       ">
     <div style="text-align: center">
-      <img src="https://tcs-dev-public.s3.eu-west-2.amazonaws.com/corporate/image/amsvc2ism6etsws3.png" width="150px"
+      <img src="https://materials.talenttender.com/images/logo.png" width="150px"
         style="margin-bottom: 20px" />
     </div>
     <div style="font-size: 16px; line-height: 1.6; color: #333333">
       <p>Dear {{APPROVER_NAME}},</p>
       <p>
-        We would like to inform you that your team has recommended {{WINNING_BIDDER_NAME}} for {{PROJECT_NAME}}.
+        We would like to inform you that your team has recommended {{WINNING_BIDDER_NAME}} for project {{PROJECT_NAME}}.
       </p>
       <p>Please approve or decline on Talent Tender the recommendation made or reach out to your team for further details.</p>
       <p style="margin-top: 20px; font-size: 16px">
@@ -36,8 +36,10 @@
       </p>
     </div>
     <div style="margin-top: 20px">
-      <p>
-        <a href="mailto:{{HELP_MAIL}}">TalentTenderHelp</a>
+      <p style="text-align: center;">
+        please contact us for technical queries at: <a href="mailto:{{TECH}}">{{TECH}}</a>,
+        <br>
+        for anything else at: <a href="mailto:{{NON_TECH}}">{{NON_TECH}}</a>
       </p>
     </div>
     <div style="
